<resources>
    <string name="app_name">Yuk Jalan</string>

    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="waktubuka">Waktu Buka</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="submit">Map</string>
    <string name="place">Place</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="santi_susanti">Santi Susanti</string>
    <string name="if_3">IF-3</string>
    <string name="description">Description</string>
    <string name="saya_adalah_mahasiswi_universitas_komputer_indonesia_jurusan_teknik_informatika">Saya adalah mahasiswi Universitas Komputer Indonesia jurusan Teknik Informatika</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
