<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F9F9F9"
    tools:context=".View.DetailActivity">


    <ImageView
        android:id="@+id/gambar_wisata"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:src="@drawable/a" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/TextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/nama_wisata"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/nama"
                    android:textSize="25sp"
                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:text="Alamat" />

                <TextView
                    android:id="@+id/alamat"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textColor="@color/design_default_color_on_secondary" />

                <ImageButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:layout_gravity="center"
                    android:background="#fff"
                    android:src="@drawable/icons8address60"
                    android:text="@string/submit"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFF"
            android:padding="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:text="Waktu Buka" />

                <TextView
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:id="@+id/waktuBuka"
                    android:layout_marginBottom="5dp"
                    android:text="@string/waktubuka"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFF"
            android:padding="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:text="Deskripsi" />

                <TextView
                    android:autoLink="web"
                    style="@style/TextDescription"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:id="@+id/deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/deskripsi"
                    android:textSize="15sp"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>